fix(mem): syscall regs argument

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "queue.h": "c",
         "stdio.h": "c",
         "type_traits": "c",
-        "*.lst": "c"
+        "*.lst": "c",
+        "cpu.h": "c",
+        "stdint.h": "c"
     }
 }
